# GCP_Assignment_1

./: CMakeLists.txt  README.md  UserGuide.txt
src/: Object.h  Ray.h  Renderer.cpp  Renderer.h  Sphere.cpp  Sphere.h  Tracer.cpp  Tracer.h  Window.cpp  Window.h  main.cpp
